--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "sphericalmercator": "^1.0.5",
     "terraformer": "^1.0.6",
     "terraformer-arcgis-parser": "^1.0.5",
-    "turf": "^3.0.14"
+    "turf": "^3.0.14",
+    "turf-area": "^3.0.12",
+    "turf-extent": "^1.0.4",
+    "turf-featurecollection": "^1.0.1"
   }
 }
