--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "turf": "^3.0.14",
     "turf-area": "^3.0.12",
     "turf-extent": "^1.0.4",
-    "turf-featurecollection": "^1.0.1"
+    "turf-featurecollection": "^1.0.1",
+    "xlsx-style": "^0.8.13"
   }
 }
