--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "debug": "^2.2.0",
+    "isomorphic-fetch": "^2.2.1",
+    "mongoose": "^4.7.0",
     "nedb": "^1.8.0",
     "sphericalmercator": "^1.0.5",
     "terraformer": "^1.0.6",
